# puzzle-bicycle

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: PyInstaller_Mac.yml
pic/: Icon.icns
src/akari/: Puzzle Bicycle Akari.spec  check.py  gui.py  gui.spec  performance_test.py  puzzle.py  test_check.py  test_puzzle.py
src/akari/Faraway Flute/: Faraway Flute 1 the water was brown.txt  Faraway Flute 2 We went to a protest but-we couldn't find each other.txt  Faraway Flute 3 I paid taxes as tariffs bumbled.txt  Faraway Flute 4 I made this puzzle as an example for how to set with Puzzle Bicycle.txt  Faraway Flute 5 What can we do-we can sit together.txt  Faraway Flute 6 When I dont do enough math for fun-I get moody.txt  Faraway Flute 7 I struggled to mesh a wing.txt  Faraway Flute 8 I changed pharmacies because-big corporations are putting pharmacies out of business and gouging patients.txt
src/hitori/: hitori_puzzle.py
