[project]
name = "puzzle-bicycle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.8",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pyside6>=6.8.1.1",
    "pytest>=8.3.4",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def main\\(",
    "if __name__ == .__main__.:",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "UP", "B", "N", "ANN", "BLE", "FBT", "A", "C4", "T10", 
          "EM", "EXE", "NPY", "RUF", "I"]
ignore = ["N802", "N803", "N806"]
preview = true
